--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "spdBTC custodial wrapper",
   "license": "MIT",
   "scripts": {
-    "deploy": "npx hardhat run deployments/deploy.ts --network sepolia"
+    "deploy": "npx hardhat run deployments/deploy.ts --network sepolia",
+    "test": "npx hardhat test --network hardhat"
   },
   "author": "Murad Karammaev <muradkarammaev@gmail.com>",
   "main": "index.js",
