--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
   "author": "Murad Karammaev <muradkarammaev@gmail.com>",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.22.19",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "hardhat": "^2.22.19",
     "prettier": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "5.3.3"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.2.0",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "ethers": "^6.13.5"
   }
 }
