feat: deploy spdBTC behind proxy

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.2.0",
+    "@openzeppelin/contracts-upgradeable": "^5.2.0",
+    "openzeppelin-contracts-4.9": "npm:@openzeppelin/contracts@^4.9.6",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5"
   }
