--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "spdBTC custodial wrapper",
   "license": "MIT",
   "scripts": {
-    "deploy": "npx hardhat run deployments/deploy.ts --network sepolia",
-    "deploy:local": "npx hardhat run deployments/deploy.ts --network hardhat",
+    "deploy:tokenminter:sepolia": "npx hardhat run deployments/tokenMinter.ts --network sepolia",
+    "deploy:spdbtc:sepolia": "npx hardhat run deployments/spdBtc.ts --network sepolia",
+    "deploy:ossifiableproxy:sepolia": "npx hardhat run deployments/ossifiableProxy.ts --network sepolia",
     "test": "npx hardhat test --network hardhat",
     "solhint": "npx solhint contracts/**/*.sol",
     "lint": "eslint \"**/*.{ts,tsx}\" -f compact",
