--- a/deployments/.env.example
+++ b/deployments/.env.example
@@ -1,3 +1,5 @@
 SEPOLIA_API_URL = "<Sepolia RPC node>"
 SEPOLIA_PRIVATE_KEY = "<private key without 0x (e.g. copied from metamask)>"
+ETHEREUM_API_URL = "<Ethereum RPC node>"
+ETHEREUM_PRIVATE_KEY = "<private key without 0x (e.g. copied from metamask)>"
 ETHERSCAN_API_KEY = "<obtain API key from etherscan>"
