--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
   "name": "spdbtc",
-  "version": "1.0.0",
+  "type": "module",
+  "version": "2.0.0",
   "description": "spdBTC custodial wrapper",
   "license": "MIT",
   "scripts": {
-    "deploy:tokenminter:sepolia": "npx hardhat run deployments/tokenMinter.ts --network sepolia",
-    "deploy:tokenminter:ethereum": "npx hardhat run deployments/tokenMinter.ts --network ethereum",
-    "deploy:spdbtc:sepolia": "npx hardhat run deployments/spdBtc.ts --network sepolia",
-    "deploy:spdbtc:ethereum": "npx hardhat run deployments/spdBtc.ts --network ethereum",
-    "deploy:ossifiableproxy:sepolia": "npx hardhat run deployments/ossifiableProxy.ts --network sepolia",
-    "deploy:ossifiableproxy:ethereum": "npx hardhat run deployments/ossifiableProxy.ts --network ethereum",
-    "test": "npx hardhat test --network hardhat",
+    "test": "npx hardhat test",
     "solhint": "npx solhint contracts/**/*.sol",
     "lint": "eslint \"**/*.{ts,tsx}\" -f compact",
-    "lint:fix": "eslint \"**/*.{ts,tsx}\" -f compact --fix"
+    "lint:fix": "eslint \"{ignition,scripts,test}/*.{ts,tsx}\" -f compact --fix"
   },
   "author": "Murad Karammaev <muradkarammaev@gmail.com>",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomicfoundation/hardhat-ethers": "^4.0.3",
+    "@nomicfoundation/hardhat-ethers-chai-matchers": "^3.0.2",
+    "@nomicfoundation/hardhat-mocha": "^3.0.7",
+    "@nomicfoundation/hardhat-network-helpers": "^3.0.3",
+    "@nomicfoundation/hardhat-toolbox-mocha-ethers": "^3.0.1",
+    "@nomicfoundation/hardhat-typechain": "^3.0.1",
+    "@types/chai": "^5.2.3",
+    "@types/mocha": "^10.0.10",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
+    "chai": "^5.3.3",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "hardhat": "^2.23.0",
+    "ethers": "^6.15.0",
+    "hardhat": "^3.0.15",
+    "mocha": "^11.7.5",
     "prettier": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "5.3.3"
@@ -31,8 +36,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.2.0",
     "@openzeppelin/contracts-upgradeable": "^5.2.0",
-    "dotenv": "^16.4.7",
-    "ethers": "^6.13.5",
-    "openzeppelin-contracts-4.9": "npm:@openzeppelin/contracts@^4.9.6"
+    "openzeppelin-contracts-4.9": "npm:@openzeppelin/contracts@^4.9.6",
+    "dotenv": "^16.4.7"
   }
 }
